picture missing horizontal scroll bar
Categories
(Core :: Layout: Positioned, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox132 | --- | unaffected |
firefox133 | --- | unaffected |
firefox134 | --- | fixed |
People
(Reporter: Mark12547, Assigned: dshin)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [anchorpositioning:m1], [wptsync upstream])
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:134.0) Gecko/20100101 Firefox/134.0
Steps to reproduce:
In reddit.com, in a message, clicked on a picture to view it in a screen. Clicked to magnify picture. Sample link to such a picture: https://www.reddit.com/media?url=https%3A%2F%2Fpreview.redd.it%2F2uhptm7zcb0e1.jpg%3Fwidth%3D3024%26format%3Dpjpg%26auto%3Dwebp%26s%3D529c063cbda20cc610319cacd8a8493d3a618436
Actual results:
Vertical scroll bar for picture is shown.
Horizontal scroll bar for picture is missing.
Expected results:
This is what happens in Release (132.0.1): clicking on picture to magnify shows both a vertical scroll bar and a horizontal scroll bar for the picture.
Comment 1•4 days ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Layout: Scrolling and Overflow' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•4 days ago
•
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=db67c8382336ede215353bbdb46f85755cbdbc5f&tochange=889105cc0018e8d2aa77407ef90f68adf878933f
Disabling the following CSS will fix the issue.
.items-center {
align-items: center;
}
Mozregression stopped at:
Bug 1920160: Part 7 - Adjust test expectations. r=jwatt
/css/css-align/abspos/stretch-intrinsic-size*
: Some tests still do not pass,
because it uses<canvas>
which overridesnsIFrame::ComputeSize
, skipping
the invocation ofnsIFrame::ComputeAbsoluteAutoSize
./css/css-anchor-position/
: Anchor positioning is not yet implemented,
changes are coincidental.grid-baseline-align-001.html
: Baseline alignment of absolutely-positioned
grid item should no longer stretch it.
Differential Revision: https://phabricator.services.mozilla.com/D226533
2024-11-11T19:25:05.471000: DEBUG : Did not find a branch, checking all integration branches
2024-11-11T19:25:05.474000: INFO : The bisection is done.
2024-11-11T19:25:05.543000: INFO : Stopped
BTW: I also tested the above link in Chrome and it properly displayed both scroll bars when I magnified the picture.
Comment 4•4 days ago
|
||
:dshin, since you are the author of the regressor, bug 1920160, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Updated•3 days ago
|
Assignee | ||
Comment 5•3 days ago
|
||
zoomable-img
is being shifted down by align-items: center
of its parent flex container, hiding the horizontal scrollbar.
Assignee | ||
Updated•3 days ago
|
Assignee | ||
Comment 6•3 days ago
|
||
Updated•3 days ago
|
Updated•2 days ago
|
Comment 9•2 days ago
|
||
bugherder |
Description
•