Bug 1930561: Consider align-items for abs-positioned frames only when finding static position of it. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D228691